Time: 1605 ms (5.00%) | Memory: 59.8 MB (20.03%) - LeetSync